--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-native": "0.72.1",
